# cp2077-hacking-minigame-solver

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
cp2077solver/: cli.py  solver.py
tests/: test_cli.py  test_solver.py
tests/fixtures/: easy-single-solution.txt  real-game-1.txt  real-game-2.txt
